--- a/assests/styles.css
+++ b/assests/styles.css
@@ -42,15 +42,12 @@ table {
 	border-spacing: 0;
 }
 
-*{
-  box-sizing: border-box;
-}
+
 
 /* Custom CSS */
 
 #home{
   line-height: 1.5;
-  font-size: 16px;
   color: #000000;
   font-family: Arial, Helvetica, sans-serif;
   padding-bottom: 100px;
@@ -85,8 +82,6 @@ hr{
   color: #52bb3b;
 }
 
-/* section styles */
-
 .exercise-header{
   padding: 42px 0;
 }
@@ -95,6 +90,10 @@ hr{
   font-size: 60px;
   text-align: center;
 }
+
+/* section styles */
+
+
 
 .section-text{
   font-size: 32px;
@@ -113,15 +112,13 @@ hr{
 .style-box{
   width: 250px;
   height: 250px;
-  border-radius: 2px;
+  border-radius: 0.2px;
   background-color: #99D8CA;
   outline: 10px solid #0D1430;
   border: 20px solid #5873E2;
   box-shadow: 0 1px 0 32px #90FFA9;
   margin: 50px auto 40px auto;
 }
-
-/* section styles */
 
 .content{
   text-align: center;
@@ -157,12 +154,9 @@ hr{
 
 .container{
   width: 660px;
-}
-
-.parent-container{
-  width: 660px;
-  border: 2px solid #000000;
+  border: 2px solid grey;
   margin: 0 auto;
+  font-size: 0;
 }
 
 .box{
@@ -175,11 +169,13 @@ hr{
 
 .box-2{
   border: 2px solid #000000;
+  box-sizing: border-box;
 }
 
 
 
-/* circle colors */
+/* circle span background colors */
+
 
 .bg-1{
   background-color: #99D8CA;
@@ -197,11 +193,13 @@ hr{
   background-color: #5873E2;
 }
 
+
+
 /* blog page styles */
 
 #blog{
   font-family: Arial, Helvetica, sans-serif;
-  line-height: 1.2;
+  line-height: 1.5;
 }
 
 .blog-container{
